feat: integrate Bullet Physics for realistic car dynamics and update physics handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,11 @@ message(STATUS "Found ASSIMP in ${ASSIMP_INCLUDE_DIR}")
 find_package(Freetype REQUIRED)
 message(STATUS "Found Freetype in ${FREETYPE_INCLUDE_DIRS}")
 
+# Find Bullet Physics
+find_package(Bullet REQUIRED)
+message(STATUS "Found Bullet in ${BULLET_INCLUDE_DIR}")
+include_directories(${BULLET_INCLUDE_DIR})
+
 INCLUDE_DIRECTORIES(/System/Library/Frameworks)
 FIND_LIBRARY(COCOA_LIBRARY Cocoa)
 FIND_LIBRARY(OpenGL_LIBRARY OpenGL)
@@ -40,7 +45,7 @@ FIND_LIBRARY(CoreVideo_LIBRARY CoreVideo)
 MARK_AS_ADVANCED(COCOA_LIBRARY OpenGL_LIBRARY)
 SET(APPLE_LIBS ${COCOA_LIBRARY} ${IOKit_LIBRARY} ${OpenGL_LIBRARY} ${CoreVideo_LIBRARY})
 SET(APPLE_LIBS ${APPLE_LIBS} ${GLFW3_LIBRARY} ${ASSIMP_LIBRARY} ${FREETYPE_LIBRARIES})
-set(LIBS ${LIBS} ${APPLE_LIBS})
+set(LIBS ${LIBS} ${APPLE_LIBS} ${BULLET_LIBRARIES})
 
 # Set Project to build
 set(PROJECTS
